--- a/02-android/app/src/main/res/layout/activity_ciclo_vida.xml
+++ b/02-android/app/src/main/res/layout/activity_ciclo_vida.xml
@@ -4,26 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".CicloVida">
 
     <TextView
+        android:id="@+id/tv_numero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_ciclo_vida"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="184dp"
-        android:text="Ciclo de vida"
+        android:layout_marginTop="108dp"
+        android:text="No tiene valores"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btn_anadir"
+        android:layout_width="185dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="52dp"
+        android:text="Añadir"
+        app:layout_constraintEnd_toEndOf="@+id/tv_numero"
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="@+id/tv_numero"
+        app:layout_constraintTop_toBottomOf="@+id/tv_numero" />
 </androidx.constraintlayout.widget.ConstraintLayout>
