--- a/02-android/app/src/main/res/layout/activity_b_list_vuew.xml
+++ b/02-android/app/src/main/res/layout/activity_b_list_vuew.xml
@@ -4,14 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BListVuewActivity">
+    tools:context=".BListViewActivity">
 
     <ListView
         android:id="@+id/lv_numeros"
-        android:layout_width="356dp"
-        android:layout_height="69dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="370dp"
+        android:layout_height="195dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_anadir_entrenador"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="Anadir"
+        app:layout_constraintBottom_toTopOf="@+id/lv_numeros"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.05" />
 </androidx.constraintlayout.widget.ConstraintLayout>
