--- a/02-android/app/src/main/res/layout/activity_ciclo_vida.xml
+++ b/02-android/app/src/main/res/layout/activity_ciclo_vida.xml
@@ -22,7 +22,9 @@
         android:layout_width="185dp"
         android:layout_height="37dp"
         android:layout_marginTop="52dp"
+        android:backgroundTint="@android:color/holo_red_light"
         android:text="Añadir"
+        android:textColor="@android:color/background_light"
         app:layout_constraintEnd_toEndOf="@+id/tv_numero"
         app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="@+id/tv_numero"
