--- a/02-android/app/src/main/res/layout/activity_intent_envia_parametros.xml
+++ b/02-android/app/src/main/res/layout/activity_intent_envia_parametros.xml
@@ -15,4 +15,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_resp_cancelar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Resp Cancelar"
+        app:layout_constraintEnd_toEndOf="@+id/btn_resp_aceptar"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/btn_resp_aceptar"
+        app:layout_constraintTop_toBottomOf="@+id/btn_resp_aceptar" />
+
+    <Button
+        android:id="@+id/btn_resp_aceptar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Resp Aceptar"
+        app:layout_constraintEnd_toEndOf="@+id/btn_devolver_respuesta"
+        app:layout_constraintHorizontal_bias="0.63"
+        app:layout_constraintStart_toStartOf="@+id/btn_devolver_respuesta"
+        app:layout_constraintTop_toBottomOf="@+id/btn_devolver_respuesta" />
 </androidx.constraintlayout.widget.ConstraintLayout>
