--- a/02-android/app/src/main/res/layout/activity_main.xml
+++ b/02-android/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,6 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.37"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.637" />
-
     <Button
         android:id="@+id/btn_ciclo_vida"
         android:layout_width="120dp"
@@ -42,8 +31,8 @@
 
     <Button
         android:id="@+id/btn_intent_respuesta"
-        android:layout_width="127dp"
-        android:layout_height="44dp"
+        android:layout_width="125dp"
+        android:layout_height="58dp"
         android:text="Int Respuesta"
         app:layout_constraintBottom_toBottomOf="@+id/btn_ciclo_vida"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,10 +54,20 @@
         android:id="@+id/btn_resp_propia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="36dp"
         android:text="Reps Propia"
         app:layout_constraintEnd_toEndOf="@+id/btn_intent_implicito"
         app:layout_constraintStart_toStartOf="@+id/btn_intent_implicito"
         app:layout_constraintTop_toBottomOf="@+id/btn_intent_implicito" />
+
+    <Button
+        android:id="@+id/btn_http"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="HTTP"
+        app:layout_constraintEnd_toEndOf="@+id/btn_resp_propia"
+        app:layout_constraintStart_toStartOf="@+id/btn_resp_propia"
+        app:layout_constraintTop_toBottomOf="@+id/btn_resp_propia" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
