--- a/02-android/app/src/main/res/layout/activity_main.xml
+++ b/02-android/app/src/main/res/layout/activity_main.xml
@@ -70,4 +70,15 @@
         app:layout_constraintStart_toStartOf="@+id/btn_resp_propia"
         app:layout_constraintTop_toBottomOf="@+id/btn_resp_propia" />
 
+    <Button
+        android:id="@+id/btn_recycler"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="Recycler"
+        app:layout_constraintEnd_toEndOf="@+id/btn_http"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/btn_http"
+        app:layout_constraintTop_toBottomOf="@+id/btn_http" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
